# callix

./: .gitignore  Cargo.toml  README.md  README.wiki.md  default-config.yaml
examples/: anthropic.rs  custom.rs  gemini.rs  openai.rs
src/: client.rs  config.rs  error.rs  lib.rs  provider.rs  request.rs  response.rs  template.rs
