[package]
name = "callix"
version = "0.1.0"
edition = "2024"
authors = ["Nima Naseri <nerdnull@proton.me>"]
description = "A flexible HTTP client library for calling various AI APIs or somthing with configuration and templating support"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/naseridev/callix"
documentation = "https://docs.rs/callix"
keywords = ["http", "api", "client", "ai", "template"]

[dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
blocking = ["reqwest/blocking"]
cookies = ["reqwest/cookies"]
gzip = ["reqwest/gzip"]
brotli = ["reqwest/brotli"]
stream = ["reqwest/stream"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
lto = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]